--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -44,6 +44,10 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+/* logo 
+#4D5AE5
+#2E2F42
+*/
 .logo {
   color: #2e2f42;
   font-family: "Raleway";
@@ -89,7 +93,10 @@ body {
   color: #434455;
 }
 
-/* hero*/
+/* hero
+#2E2F42
+#FFFFFF
+#4D5AE5*/
 .hero {
   background-color: #2e2f42;
 }
@@ -116,7 +123,8 @@ body {
 .hero .button:focus {
   background-color: #2e2f42;
 }
-/* info */
+/* info
+#2E2F42 */
 
 .info-titles {
   color: #2e2f42;
@@ -127,7 +135,8 @@ body {
 .info > p {
   line-height: 1.5;
 }
-/* photo */
+/* photo 
+#2E2F42 */
 .photo-titles {
   color: #2e2f42;
   font-weight: 700;
@@ -135,7 +144,9 @@ body {
   line-height: 1.1;
   text-align: center;
 }
-/* team */
+/* team 
+#2E2F42
+#F4F4FD*/
 .team {
   background-color: #f4f4fd;
 }
@@ -154,6 +165,10 @@ body {
 .team > p {
   line-height: 1.5;
 }
+/* foooter сайта
+#2E2F42
+#F4F4FD
+#E7E9FC*/
 .down {
   background-color: #2e2f42;
 }
@@ -172,7 +187,11 @@ body {
 
 /* portfolio*/
 
-/* portfolio- button*/
+/* portfolio- button
+#FFFFFF
+#4D5AE5
+#E7E9FC
+*/
 .gallery-link {
   color: #4d5ae5;
 
@@ -191,6 +210,8 @@ body {
   color: #ffffff;
   background-color: #4d5ae5;
 }
+/* portfolio photo 
+#2E2F42*/
 
 .example-titles {
   font-weight: 600;
