--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -94,12 +94,14 @@ body {
   text-decoration: none;
   color: var(--first-text-color);
   cursor: default;
+  font-style: normal;
 }
 .auth-nav .tel {
   line-height: 1.5;
   text-decoration: none;
   color: var(--first-text-color);
   cursor: default;
+  font-style: normal;
 }
 .auth-nav .link:hover,
 .auth-nav .link:focus {
